--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="app/states.js"></script>
   <script src="app/users/user-list.js"></script>
   <script src="app/users/user-add.js"></script>
+  <script src="app/users/user-detail.js"></script>
   <script src="app/users/states.js"></script>
   <script src="app/users/services/users.service.js"></script>
   <!-- Add New Component JS Above -->
